# jaQC-ESP32-S3

./: CMakeLists.txt  partitions_2MB_app_fs.csv  partitions_4MB_app_fs.csv  partitions_8MB_app_fs.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1.old
src/: CMakeLists.txt  app_TLV320ADC5120.c  app_TLV320ADC5120.h  app_admin.c  app_admin.h  app_main.c  app_mqtt.c  app_mqtt.h  driver_TLV320ADC5120.c  driver_TLV320ADC5120.h  jaqc_admin.c  jaqc_admin.h  model_config.c  model_config.h  model_op_state.c  model_op_state.h  model_sample.c  model_sample.h  models.c  models.h  util_device.c  util_device.h  util_dns.c  util_dns.h  util_err.c  util_err.h  util_filesys.c  util_filesys.h  util_flash.c  util_flash.h  util_html_fb.h  util_http.c  util_http.h  util_mqtt.c  util_mqtt.h  util_net_events.c  util_net_events.h  util_tcpip.c  util_tcpip.h  util_wifi.c  (+1 more)
