idf_component_register(
    SRCS 
        "app_main.c"
        "jaqc_admin.c"
        "model_config.c"
        "model_op_state.c"
        "models.c"
        "util_device.c"
        "util_dns.c"
        "util_err.c"
        "util_filesys.c"
        "util_flash.c"
        "util_http.c"
        "util_net_events.c"
        "util_wifi.c"
    INCLUDE_DIRS
        "."
    REQUIRES 
        nvs_flash
        spiffs
        esp_netif
        esp_event
        esp_system
        esp_wifi
        freertos
        log
)
